--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "classnames": "^2.2.6",
     "jest": "^22.3.0",
     "node-fetch": "^2.1.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "babel-jest": "^22.4.1",
