--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^22.4.2",
     "node-sass": "^4.9.1",
     "nodemon": "1.17.5",
+    "react-test-renderer": "^16.5.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.0.1",
